# Sustainability-AI-Model

./: .dockerignore  .env.example  .gitignore  ACADEMIC_PROJECT_REPORT.md  ACTION_PLAN.md  CODE_INSPECTION_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.json  CONTRIBUTING.md  CRITICAL_ACCURACY_DEBUG.md  CRITICAL_DATASET_PATH_FIXES.md  CRITICAL_ENHANCEMENTS_PLAN.md  CRITICAL_FIX_VALIDATION_FAILURE.md  CRITICAL_IMPROVEMENTS_COMPLETE.md  CRITICAL_SECURITY_FIXES_REPORT.md  DEEP_ANALYSIS_IMPLEMENTATION_REPORT.md  DEEP_CODE_ANALYSIS_REPORT.md  DEEP_CODE_FIXING_COMPLETE.md  DEEP_CODE_FIXING_REPORT.md  Dockerfile  EMERGENCY_DIAGNOSTIC.py  FINAL_CODE_QUALITY_REPORT.md  FINAL_COMPREHENSIVE_VALIDATION_REPORT.md  FINAL_ERROR_ELIMINATION_REPORT.md  FINAL_FIX_APPLIED.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_KAGGLE_SETUP.md  FINAL_SYSTEM_READINESS_REPORT.md  FINAL_VERIFICATION_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  INTENSIVE_CODE_QUALITY_AUDIT.md  Introduction.md  KAGGLE_INSTALLATION_COMMANDS.md  KAGGLE_SETUP_CELL.py  LLM_DATA_COLLECTION_GUIDE.md  M4_MAX_TRAINING_GUIDE.md  MATHEMATICAL_ARCHITECTURE.md  MAXIMUM_PERFORMANCE_OPTIMIZATION.md  Makefile  (+80 more)
Documents/: COMPREHENSIVE_FIX_APPLIED.md  COMPREHENSIVE_HYPERPARAMETER_FIX.md  CPU_MODE_ENABLED.md  CRITICAL_CRASH_FIXES.md  DATASET_LOADING_FIX_APPLIED.md  ITERATION_REPORT.md  KAGGLE_DATASETS.md  LOW_ACCURACY_FIX_APPLIED.md  OVERFITTING_FIX_APPLIED.md  PEAK_OPTIMIZATION_APPLIED.md  RESUME_TRAINING_GUIDE.md  VALIDATION_SUMMARY.md  VISION_AUDIT_AND_REDESIGN.md
configs/: gnn.yaml  llm_sft.yaml  llm_sft_m4max.yaml  llm_sft_rtx5090.yaml  orchestrator.yaml  rag.yaml  vision.yaml  vision_cls.yaml  vision_cls_m4max.yaml  vision_det.yaml  vision_physics.yaml
data/: DATASET_PREPARATION_PLAN.md  gnn_training_expanded.json  gnn_training_fully_annotated.json  llm_training_expanded.json  llm_training_fully_annotated.json  llm_training_ultra_expanded.json  organizations_database.json  rag_knowledge_base_expanded.json  sustainability_knowledge_base.json  vision_dataset_metadata.json
deployment/: export_pipeline.py
deployment_package/: classification_report.json  confusion_matrix.npy  model_metadata.json
docs/: 3D_DATASET_RESEARCH_AND_R2_PLAN.md  EMBEDDING_PROVENANCE_SCHEMA.md  FEEDBACK_AND_FORMATTING_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_IMPROVEMENTS.md  PROJECT_SUMMARY.md  architecture.md  data_schema.md  datasets.md  getting_started.md
evaluation/: comprehensive_eval.py  eval_reasoning_benchmark.py  evaluate_vision_v2.py  interpret_vision.py  stress_test_vision.py
evaluation_results/: comprehensive_evaluation_report.json  confusion_matrix_full.npy  eval_log.txt  reasoning_benchmark_results.json
ios_deployment/: API_DOCUMENTATION.md  BACKEND_INTEGRATION_UPDATES.md  BACKEND_MERGE_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  FINAL_INTEGRATION_SUMMARY.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_UPDATES_LIST.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  ReleAFSDK+Network.swift  ReleAFSDK.swift  apply_ios_integration.sh  ios_deployment_simulation.py  pre_deployment_check.sh  production_config.yaml  validate_ios_integration.py
k8s/: MANIFEST_SUMMARY.md  README.md  REAL_WORLD_QUALITY_REPORT.md  cleanup.sh  deploy.sh  namespace.yaml  validate.sh
k8s/autoscaling/: hpa.yaml
k8s/configmaps/: app-config.yaml  grafana-dashboards.yaml  orchestrator-config.yaml  postgres-config.yaml  redis-config.yaml
k8s/databases/: neo4j.yaml  postgres.yaml  qdrant.yaml  redis.yaml
k8s/monitoring/: grafana.yaml  jaeger.yaml  prometheus.yaml
k8s/networking/: ingress.yaml  network-policies.yaml  services.yaml
k8s/secrets/: app-secrets.yaml.template
k8s/services/: api-gateway.yaml  kg-service.yaml  llm-service.yaml  orchestrator.yaml  org-search-service.yaml  (+2 more)
outputs/: data_pipeline_pre_repair_stdout.txt  data_pipeline_repair_stdout.txt  data_pipeline_validate_stdout.txt  mobile_deployment_validation_authenticated.json  mobile_deployment_validation_degraded_allowed.json  mobile_deployment_validation_enterprise_key.json  mobile_deployment_validation_fast_degraded.json  mobile_deployment_validation_final.json  mobile_deployment_validation_initial.json  mobile_deployment_validation_network_fixed.json  mobile_gateway_stress_enterprise_prefix_report.json  mobile_gateway_stress_enterprise_report.json  mobile_gateway_stress_final.json  mobile_gateway_stress_report.json
scripts/: activate_production.py  architecture_deep_dive_test.py  code_quality_examination.py  code_quality_uncertainty_assessment.py  comprehensive_deduplication.py  comprehensive_validation.py  data_pipeline_stress_validate.py  deep_code_analysis.py  deep_code_fixing.py  deep_error_elimination.py  execute_upgrade.sh  exhaustive_vision_stress_test.py  expand_datasets.py  expand_edge_case_training_data.py  export_vision_inference_checkpoint.py  extreme_skeptical_analysis.py  extreme_uncertainty_test.py  final_training_verification.py  final_validation.sh  full_scale_upgrade_analysis.py  generate_knowledge_corpus.py  generate_sft_dataset.py  holistic_data_annotation.py  industrial_e2e_validate.py  industrial_model_readiness_audit.py  ingest_knowledge.py  init_databases.py  install_packages.py  intensive_error_elimination.py  m4max_preflight_check.py  master_proof_test.py  migrate_provenance.py  mobile_deployment_validate.py  mobile_gateway_stress.py  model_component_stress_validate.py  prepare_training_data.py  prepare_vision_data.py  production_readiness_test.py  r2_3d_dataset_mirror.py  robustness_edge_case_test.py  (+21 more)
test_results/: capability_proof_report_20251212_001344.txt  detailed_results_20251212_001344.json
tests/: conftest.py  test_capability_proof_standalone.py  test_comprehensive_capability_comparison.py  test_comprehensive_simulation.py  test_critical_fixes.py  test_critical_issue_verification.py  test_deep_integration.py  test_industrial_scale.py  test_monitoring_comprehensive.py  test_real_image_processing.py  test_real_world_ios_simulation.py  test_reasoning_system.py
(+118 files in other folders)
