[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "releaf-ai"
version = "1.0.0"
description = "AI-powered sustainability and waste intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ReleAF AI Team"}
]
keywords = ["ai", "sustainability", "recycling", "upcycling", "computer-vision", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML frameworks (UPGRADED)
    "torch>=2.2.0,<2.3.0",
    "torchvision>=0.17.0,<0.18.0",
    "transformers>=4.37.0,<5.0.0",
    "huggingface-hub>=0.34.0,<1.0",
    "peft>=0.8.0,<1.0.0",
    "accelerate>=0.26.0,<2.0.0",
    "bitsandbytes>=0.42.0,<1.0.0",

    # Vision (UPGRADED)
    "timm>=0.9.12,<1.1.0",
    "ultralytics>=8.1.0,<9.0.0",
    "opencv-python>=4.9.0,<5.0.0",
    "albumentations>=1.4.0,<3.0.0",
    "pillow>=10.2.0,<13.0.0",
    "pycocotools>=2.0.6,<3.0.0",

    # NLP & Embeddings (UPGRADED)
    "sentence-transformers>=2.3.0,<6.0.0",
    "tokenizers>=0.15.2,<0.23.0",

    # Vector stores & RAG (UPGRADED)
    "qdrant-client>=1.8.0,<2.0.0",
    "faiss-cpu>=1.8.0,<2.0.0",
    "chromadb>=0.4.22,<2.0.0",
    "rank-bm25>=0.2.2",

    # Graph (UPGRADED)
    "neo4j>=5.16.0,<6.0.0",
    "torch-geometric>=2.5.0,<3.0.0",
    "networkx>=3.2.1,<4.0.0",

    # Web & API (UPGRADED)
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "httpx>=0.26.0,<1.0.0",
    "aiohttp>=3.9.3,<4.0.0",

    # Database (UPGRADED)
    "sqlalchemy>=2.0.25,<3.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "alembic>=1.13.1,<2.0.0",

    # Data processing (UPGRADED)
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pyarrow>=15.0.0,<25.0.0",
    "datasets>=2.17.0,<5.0.0",
    "boto3>=1.34.0,<2.0.0",

    # Utilities (UPGRADED)
    "pyyaml>=6.0.1,<7.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "tqdm>=4.66.1,<5.0.0",
    "rich>=13.7.0,<15.0.0",
    "loguru>=0.7.2,<1.0.0",

    # Monitoring (UPGRADED)
    "prometheus-client>=0.20.0,<1.0.0",
    "wandb>=0.16.3,<1.0.0",
    "opentelemetry-api>=1.22.0,<2.0.0",
    "opentelemetry-sdk>=1.22.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0,<1.0.0",

    # Testing (UPGRADED)
    "pytest>=8.0.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "hypothesis>=6.98.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ruff>=0.2.0",
]

gpu = [
    "faiss-gpu>=1.8.0",
]

all = [
    "releaf-ai[dev,gpu]",
]

[project.urls]
Homepage = "https://github.com/releaf-ai/sustainability-ai-model"
Documentation = "https://docs.releaf-ai.com"
Repository = "https://github.com/releaf-ai/sustainability-ai-model"
Issues = "https://github.com/releaf-ai/sustainability-ai-model/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "training*"]
namespaces = true

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | models
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
exclude = [
    ".git",
    ".mypy_cache",
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=services --cov=training --cov-report=html --cov-report=term"
